--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,80 +1,22 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
-=======
-HELP.md
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-# Config files (Sensitive data)
-application.properties
-
-# Security & OS
-.env
-*.log
-.DS_Store
-Thumbs.db
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### IntelliJ IDEA ###
-.idea
+# IntelliJ IDEA (폴더 전체를 무시하도록 수정)
+.idea/
 *.iws
 *.iml
 *.ipr
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
+# VS Code
 .vscode/
 
-# Database & Uploads (If inside project)
-/temp/
-/upload/
+# Config files (보안상 매우 중요)
+**/application.properties
+**/application-*.properties
+.env
 
-# If you place an upload folder inside a project, keep the folder but ignore the files inside
-/src/main/resources/static/upload/*
-!/src/main/resources/static/upload/.gitkeep
->>>>>>> b2062cf (feat: 프로젝트 초기 설정 및 환경 구축)
+# MacOS/Windows 시스템 파일
+.DS_Store
+Thumbs.db
+
+# 빌드 결과물
+**/build/
+**/.gradle/
