--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -25,6 +25,8 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.flywaydb:flyway-core'
+    implementation 'org.flywaydb:flyway-mysql'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
