--- a/backend/src/main/resources/application.properties.sample
+++ b/backend/src/main/resources/application.properties.sample
@@ -1,18 +1,29 @@
 # [필독] 이 파일을 복사하여 application.properties로 이름을 바꾼 뒤 사용하세요.
-# 각자의 로컬 환경(DB 비번 등)에 맞게 수정이 필요합니다.
+# .gitignore에 application.properties가 포함되어 있는지 꼭 확인하세요!
 
 spring.application.name=oshiashi
 server.port=9922
 
-# MySQL 설정 (본인의 DB명과 계정 정보를 입력하세요)
+# MySQL 설정 (환경변수 DB_URL, DB_USERNAME, DB_PASSWORD를 설정하세요)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/YOUR_DB_NAME?serverTimezone=Asia/Seoul
-spring.datasource.username=YOUR_USERNAME
-spring.datasource.password=YOUR_PASSWORD
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+# Flyway 설정
+spring.flyway.enabled=true
+# 기존에 워크벤치로 만든 테이블이 있어도 에러 없이 시작하게 해주는 옵션
+spring.flyway.baseline-on-migrate=true
 
 # JPA 설정
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# DDL 자동생성/검증 설정
+# Flyway를 사용하므로 엔티티-DB 구조 일치 여부만 검사하는 validate가 가장 안전합니다.
+spring.jpa.hibernate.ddl-auto=validate
+
+# Hibernate가 자동으로 생성할 sql의 포맷 설정
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # 업로드 경로 (본인의 로컬 경로에 맞게 수정)
 board.uploadPath=c:/MyProject/util/upload/
