--- a/backend/src/main/resources/application.properties.sample
+++ b/backend/src/main/resources/application.properties.sample
@@ -27,3 +27,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # 업로드 경로 (본인의 로컬 경로에 맞게 수정)
 board.uploadPath=c:/MyProject/util/upload/
+
+# Google Map API KEY setting
+google.maps.api.key=YOUR_API_KEY_HERE
